tests/codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.postfix.call.missing.close/reader-postfix-call-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-postfix-call-missing-close
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/quote-feature-postfix
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' to close postfix call
;; TEST-ATOM: atom.reader.error.reader.postfix.call.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.postfix.call.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' to close postfix call
;; TEST-READER-PATH: reader.c:7148 parser.postfix
;; TEST-CODEGEN-PATH: diagnostic.parser.postfix
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:7148 Expected ')' to close postfix call
;; TEST-USES-ATOM: atom.reader.error.reader.postfix.call.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.postfix
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/quote-feature-postfix/atom.reader.error.reader.postfix.call.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.postfix.call.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.postfix.call.missing.close
;; TEST-CLI-TARGET: codegen errors reader quote-feature-postfix

(module Main)
(define (f [x : Int] -> Int) x)
(show f(1)
